Fix alignment

--- a/css/index.scss
+++ b/css/index.scss
@@ -559,7 +559,7 @@ body.resizing { cursor: ew-resize; }
   left: 0;
   right: 0;
   background: lighten($white-color, 1%);
-  max-width: 600px;
+  max-width: 610px;
   padding: 0 20px;
 }
 
